--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "bootstrap": "^5.1.3",
     "connected-react-router": "4.5.0",
     "date-fns": "^2.28.0",
-    "react": "^17.0.2",
+    "react": "16.6.3",
     "react-bootstrap": "^2.4.0",
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
-    "react-redux": "5.1.1",
+    "react-redux": "^5.1.1",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "redux": "4.0.1",
