--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "bootstrap": "^5.1.3",
     "connected-react-router": "4.5.0",
     "date-fns": "^2.28.0",
-    "react": "16.6.3",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
-    "redux": "4.0.1",
+    "redux": "^4.1.0",
     "redux-thunk": "2.3.0",
     "sanitize.css": "7.0.3",
     "serve": "10.1.1",
