--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "react-bootstrap": "^2.4.0",
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
+    "react-redux": "5.1.1",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
-    "redux": "^4.1.0",
+    "redux": "4.0.1",
     "redux-thunk": "2.3.0",
     "sanitize.css": "7.0.3",
     "serve": "10.1.1",
