--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "sanitize.css": "7.0.3",
     "serve": "10.1.1",
     "sweetalert2": "^11.4.19",
-    "sweetalert2-react-content": "^5.0.1"
+    "sweetalert2-react-content": "^5.0.1",
+    "moment": "^2.29.1"
   },
   "browserslist": [
     ">0.2%",
